--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+ margin-left:300px;
+ margin-right:300px;
+ text-transform:none;
+ font-size:23px;
+}
 .au {
     display: block;
     font-size: 1em;
